[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ethans-services-infra"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-gcp>=9.0.0,<10.0.0",
]

[project.scripts]
deploy = "deploy:main"

[tool.setuptools]
py-modules = ["deploy"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
