[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ethans-services-infra"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-gcp>=9.0.0,<10.0.0",
    "pulumi-kubernetes>=4.0.0,<5.0.0",
]

[project.scripts]
deploy = "deploy:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.ty.src]
# Exclude Pulumi entrypoint — Pulumi's type stubs produce false positives
# with TypedDict inputs and Output.apply() lambdas.
exclude = ["__main__.py"]
